changes and added the product to festival